feat: Mejorar la interfaz de usuario de la gestión de solicitudes de homologación, añadiendo estilos a los botones de acción y mejorando la selección de solicitudes en la tabla de estado.

--- a/src/app/pages/funcionario/homologacion-asignaturas/homologacion-asignaturas.component.html
+++ b/src/app/pages/funcionario/homologacion-asignaturas/homologacion-asignaturas.component.html
@@ -6,6 +6,7 @@
     icon="assignment">
     
     <app-request-status-table
+      #requestStatusTable
       [solicitudes]="solicitudes"
       [showOficio]="false"
       [showComentarios]="false"
