feat: Mejorar la interfaz de usuario de la gestión de homologación de asignaturas, añadiendo estilos personalizados a los botones de acción y optimizando la selección de solicitudes en la tabla de estado.

--- a/src/app/pages/coordinador/homologacion-asignaturas/homologacion-asignaturas.component.html
+++ b/src/app/pages/coordinador/homologacion-asignaturas/homologacion-asignaturas.component.html
@@ -6,6 +6,7 @@
     icon="assignment">
     
     <app-request-status-table
+      #requestStatusTable
       [solicitudes]="solicitudes"
       [showOficio]="false"
       [showComentarios]="false"
@@ -47,7 +48,7 @@
                       matTooltip="Visualizar documento">
                 <mat-icon>visibility</mat-icon>
               </button>
-              <button mat-icon-button color="accent" (click)="agregarComentario(documento)" 
+              <button mat-icon-button color="primary" (click)="agregarComentario(documento)" 
                       matTooltip="Añadir comentario">
                 <mat-icon>comment</mat-icon>
               </button>
