feat: Mejorar la interfaz de usuario en la gestión de homologación de asignaturas, actualizando estilos de botones y tarjetas, y optimizando la presentación de observaciones en el generador de documentos.

--- a/src/app/pages/estudiante/homologacion-asignaturas/homologacion-asignaturas.component.html
+++ b/src/app/pages/estudiante/homologacion-asignaturas/homologacion-asignaturas.component.html
@@ -19,6 +19,7 @@
 
       <div class="enviar-solicitud mt-4">
         <button mat-raised-button color="primary"
+                class="btn-enviar"
                 [disabled]="!puedeEnviar()"
                 (click)="onSolicitudEnviada()">
           Enviar Solicitud
