--- a/src/app/pages/secretaria/homologacion-asignaturas/homologacion-asignaturas.component.html
+++ b/src/app/pages/secretaria/homologacion-asignaturas/homologacion-asignaturas.component.html
@@ -18,7 +18,7 @@
       <!-- Contenedor para generar documento usando componente genérico -->
       <app-card-container
         *ngIf="selectedSolicitud"
-        title="Generar Documento Oficial"
+        title="Generar Documento Oficio/Resolución"
         icon="description">
 
         <app-document-generator
