--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -25,7 +25,7 @@
         <div class="user-avatar">
           <span class="user-initials">{{ getUserInitials() }}</span>
         </div>
-        <span class="user-name-simple">{{ userName }}</span>
+        <span class="user-name-horizontal">{{ userName }}</span>
         <mat-icon class="dropdown-icon">keyboard_arrow_down</mat-icon>
       </button>
       <mat-menu #userMenu="matMenu">
